--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
   <style name="Theme.CarNavRelay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <item name="colorPrimary">@color/purple_500</item>
+    <item name="colorPrimaryVariant">@color/purple_700</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorSecondaryVariant">@color/teal_700</item>
+    <item name="colorOnSecondary">@color/black</item>
     <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    <item name="android:navigationBarColor">?attr/colorPrimaryVariant</item>
+  </style>
+
+  <style name="Theme.CarNavRelay.Splash" parent="Theme.CarNavRelay">
+    <item name="android:windowBackground">@drawable/splash_background</item>
   </style>
 </resources>
