--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,67 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <style name="Theme.CarNavRelay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+  <!-- Ghost Purple Theme -->
+  <style name="Theme.CarNavRelay" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Primary Colors (Ghost Purple) -->
     <item name="colorPrimary">@color/purple_500</item>
     <item name="colorPrimaryVariant">@color/purple_700</item>
     <item name="colorOnPrimary">@color/white</item>
-    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorPrimaryContainer">@color/purple_100</item>
+    <item name="colorOnPrimaryContainer">@color/purple_900</item>
+
+    <!-- Secondary Colors (Teal) -->
+    <item name="colorSecondary">@color/teal_500</item>
     <item name="colorSecondaryVariant">@color/teal_700</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-    <item name="android:navigationBarColor">?attr/colorPrimaryVariant</item>
+    <item name="colorOnSecondary">@color/white</item>
+    <item name="colorSecondaryContainer">@color/teal_200</item>
+    <item name="colorOnSecondaryContainer">@color/teal_900</item>
+
+    <!-- Surface Colors -->
+    <item name="colorSurface">@color/surface</item>
+    <item name="colorOnSurface">@color/on_surface</item>
+    <item name="android:colorBackground">@color/background</item>
+    <item name="colorOnBackground">@color/on_surface</item>
+
+    <!-- Error Colors -->
+    <item name="colorError">@color/error</item>
+    <item name="colorOnError">@color/white</item>
+
+    <!-- System Bars -->
+    <item name="android:statusBarColor">@color/purple_700</item>
+    <item name="android:navigationBarColor">@color/purple_900</item>
+    <item name="android:windowLightStatusBar">false</item>
+
+    <!-- Shape Appearance -->
+    <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.CarNavRelay.SmallComponent</item>
+    <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.CarNavRelay.MediumComponent</item>
+    <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.CarNavRelay.LargeComponent</item>
+  </style>
+
+  <!-- Shape Appearances -->
+  <style name="ShapeAppearance.CarNavRelay.SmallComponent" parent="ShapeAppearance.Material3.SmallComponent">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">8dp</item>
+  </style>
+
+  <style name="ShapeAppearance.CarNavRelay.MediumComponent" parent="ShapeAppearance.Material3.MediumComponent">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">16dp</item>
+  </style>
+
+  <style name="ShapeAppearance.CarNavRelay.LargeComponent" parent="ShapeAppearance.Material3.LargeComponent">
+    <item name="cornerFamily">rounded</item>
+    <item name="cornerSize">24dp</item>
+  </style>
+
+  <!-- Card Style -->
+  <style name="Widget.CarNavRelay.CardView" parent="Widget.Material3.CardView.Elevated">
+    <item name="cardElevation">8dp</item>
+    <item name="cardCornerRadius">24dp</item>
+  </style>
+
+  <!-- Button Styles -->
+  <style name="Widget.CarNavRelay.Button" parent="Widget.Material3.Button">
+    <item name="cornerRadius">16dp</item>
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
   </style>
 </resources>
