--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
     <color name="success">#27AE60</color>
     <color name="warning">#F39C12</color>
     <color name="error">#E74C3C</color>
+    <color name="red">#E74C3C</color>
     <color name="info">#3498DB</color>
 
     <!-- Background -->
