Improve share UX and button contrast

--- a/app/src/main/res/drawable/aurora_button_ripple.xml
+++ b/app/src/main/res/drawable/aurora_button_ripple.xml
@@ -3,12 +3,10 @@
     android:color="@color/aurora_purple">
     <item android:id="@android:id/background">
         <shape>
-            <gradient
-                android:angle="135"
-                android:startColor="@color/aurora_blue"
-                android:centerColor="@color/aurora_cyan"
-                android:endColor="@color/aurora_green"
-                android:type="linear" />
+            <solid android:color="@color/aurora_purple" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/aurora_cyan" />
             <corners android:radius="16dp" />
         </shape>
     </item>
