--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,4 +79,10 @@
     <item name="android:windowNoTitle">true</item>
     <item name="android:backgroundDimEnabled">false</item>
   </style>
+
+  <!-- NoDisplay Theme for SilentShareReceiverActivity -->
+  <style name="Theme.CarNavRelay.NoDisplay" parent="Theme.CarNavRelay.Translucent">
+    <item name="android:windowNoDisplay">true</item>
+    <item name="android:windowDisablePreview">true</item>
+  </style>
 </resources>
